<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_menu_wallet"
            android:title="@string/my_wallet" />
        <item
            android:id="@+id/nav_cashback"
            android:icon="@drawable/ic_menu_wallet"
            android:title="@string/cashback" />
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_menu_inbox"
            android:title="@string/inbox" />
        <item
            android:id="@+id/nav_contribute"
            android:icon="@drawable/baseline_room_black_24"
            android:title="@string/contribute" />
    </group>

</menu>
