<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clipToPadding="false"
        android:padding="@dimen/margin_16dp"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:id="@+id/activity_add_member"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="naddy.simplewebview.ui.modifyMember.EditMemberActivity">

            <TextView
                style="@style/TextViewBlackHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <EditText
                android:id="@+id/et_date"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:focusable="false"
                android:hint="@string/hint_date"
                android:imeOptions="actionNext" />

            <TextView
                style="@style/TextViewBlackHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/time" />

            <EditText
                android:id="@+id/et_time"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:hint="@string/hint_time"
                android:imeOptions="actionNext" />

            <TextView
                style="@style/TextViewBlackHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/details" />

            <EditText
                android:id="@+id/et_details"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:hint="@string/hint_details"
                android:imeOptions="actionNext" />

            <TextView
                style="@style/TextViewBlackHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/venue" />

            <EditText
                android:id="@+id/et_venue"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:hint="@string/venue"
                android:imeOptions="actionNext" />

            <TextView
                style="@style/TextViewBlackHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/entry_fee" />

            <EditText
                android:id="@+id/et_entry_fee"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:hint="@string/entry_fee"
                android:imeOptions="actionNext" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>