<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bt_next"
            android:orientation="vertical"
            android:padding="@dimen/margin_16dp"
            tools:context=".ui.jobs.jobmela.JobMelaFragment">

            <TextView
                style="@style/TextViewBlackHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interested_in_job_mela" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/rb_yes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes"
                    app:theme="@style/RadioButtonStyle" />


                <RadioButton
                    android:id="@+id/rb_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    app:theme="@style/RadioButtonStyle" />
            </RadioGroup>

            <TextView
                style="@style/TextViewBlackHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/kind_of_job_you_are_interested_in" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_job_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_8dp"
                tools:listitem="@layout/fragment_job_type_list_item" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_next"
            style="@style/ButtonBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/margin_16dp"
            android:text="@string/next" />
    </RelativeLayout>
</layout>