<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:paddingHorizontal="@dimen/margin_16dp"
            android:paddingTop="@dimen/margin_16dp"
            android:text="@string/no_money"
            android:textSize="@dimen/text_size_16"
            android:visibility="gone"
            tools:visibility="visible" />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bt_submit"
            android:layout_below="@+id/tv_message"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_16dp"
                tools:context=".ui.jobs.jobmela.JobMelaFragment">

                <TextView
                    style="@style/TextViewBlackHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_qualification" />

                <EditText
                    android:id="@+id/et_qualification"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:hint="@string/e_g_graduate"
                    android:inputType="textMultiLine"
                    android:padding="@dimen/margin_8dp" />

                <!--                <FrameLayout-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginTop="@dimen/margin_4dp"-->
                <!--                    android:background="@drawable/edit_text_border">-->

                <!--                    <Spinner-->
                <!--                        android:id="@+id/sp_qualification"-->
                <!--                        style="@style/SpinnerStyle"-->
                <!--                        android:layout_width="match_parent"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:theme="@style/SpinnerStyle" />-->
                <!--                </FrameLayout>-->

                <TextView
                    style="@style/TextViewBlackHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/your_experience" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:background="@drawable/edit_text_border">

                    <Spinner
                        android:id="@+id/sp_experience"
                        style="@style/SpinnerStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/SpinnerStyle" />
                </FrameLayout>

                <TextView
                    style="@style/TextViewBlackHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/tell_us_more_about_your_work_experience" />

                <EditText
                    android:id="@+id/et_more_experience"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:gravity="top"
                    android:hint="@string/optional_freshers"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:padding="@dimen/margin_8dp" />

                <TextView
                    style="@style/TextViewBlackHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/do_you_own_a_two_wheeler" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/rb_yes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/yes"
                        app:theme="@style/RadioButtonStyle" />


                    <RadioButton
                        android:id="@+id/rb_no"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/no"
                        app:theme="@style/RadioButtonStyle" />
                </RadioGroup>

                <TextView
                    style="@style/TextViewBlackHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/minimum_salary_expected" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:background="@drawable/edit_text_border">

                    <Spinner
                        android:id="@+id/sp_salary_expected"
                        style="@style/SpinnerStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/SpinnerStyle" />
                </FrameLayout>

                <TextView
                    android:id="@+id/tv_add_picture"
                    style="@style/TextViewBlackHeading2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:paddingBottom="@dimen/margin_4dp"
                    android:text="@string/upload_your_profile_picture" />


                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/iv_picture"
                    android:layout_width="@dimen/margin_100dp"
                    android:layout_height="@dimen/margin_100dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:background="@color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/placeholder_small"
                    app:riv_border_color="@color/colorPrimary"
                    app:riv_border_width="@dimen/margin_2dp"
                    app:riv_corner_radius="@dimen/margin_8dp"
                    app:riv_oval="false" />


            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/bt_submit"
            style="@style/ButtonBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:text="@string/i_agree"
            android:visibility="gone" />

    </RelativeLayout>
</layout>