<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.profile.ReferralActivity">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewBlackHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/please_let_us_know_who_referred_you" />


            <EditText
                android:id="@+id/et_referral_code"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_8dp"
                android:gravity="center_horizontal"
                android:hint="@string/you_may_leave_it_blank"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="10" />

            <Button
                android:id="@+id/bt_submit"
                style="@style/ButtonBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_64dp"
                android:text="@string/submit" />
        </LinearLayout>
    </LinearLayout>
</layout>